# net_surgeon

./: Cargo.toml  bypass_domains.txt  config.toml  main.rs  quic.rs  rules.nft  socks5.rs  socks5_udp.rs
locales/: en.yml  ru.yml
src/: config.rs  diagnostics.rs  main.rs  metrics.rs
src/bypass/: fragment.rs  mod.rs
src/cli/: app.rs  config_editor.rs  domains_editor.rs  events.rs  i18n.rs  logger.rs  mod.rs  traffic_history.rs  ui.rs
src/dns/: doh.rs  ip_cache.rs  mod.rs  upd_relay.rs
src/proxy/: http.rs  https.rs  mod.rs  tcp.rs
src/socks5/: tcp.rs  udp.rs
src/udp/: mod.rs  proxy.rs  quic.rs  quic_parser.rs
