[package]
name = "net_surgeon"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.186"
quinn = "0.11.9"
rand = "0.10.1"
rcgen = "0.14.8"
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
ratatui = "0.29"
crossterm = "0.28"
tokio-util = "0.7.18"
chrono = "0.4.45"
toml_edit = "0.25.12"
rust-i18n = "4.1.0"
